Fixed bug where the contact us link wraps to two lines
Resolves bug - https://github.com/department-of-veterans-affairs/vets-design-system-documentation/issues/3173

--- a/src/platform/site-wide/sass/shame.scss
+++ b/src/platform/site-wide/sass/shame.scss
@@ -234,6 +234,7 @@ $medium-phone-screen: 375px;
       .profile-nav-container {
         align-items: baseline;
         display: inherit;
+        white-space: nowrap;
       }
 
       .sign-in-nav {
